# utca

./: .gitignore  0.utca.ron  Cargo.toml  README.adoc  README.md  df.utca.ron  fatty_acids.ftl  fatty_acids.md  fatty_acids.md.ftl  fatty_acids.toml  index.html  polars.adoc  temp  temp.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: pages.yml  rust.yml  workflow_runs.yml
configs/: H242 Tamia Peroxide old.toml  H242 Tamia Peroxide.toml  H242_Tamia_Peroxide.toml  Olea M old.toml  Olea SH.toml  Olea_M.toml  Pinaceae Cedrus.toml
configs/C70/: C70_Control.toml  C70_H2O2.toml  С70_Control.toml  С70_H2O2.toml  С70_NaCl.toml
configs/Euonymus/: EuonymusEuonymusBungeanus.utca.toml  EuonymusEuonymusEuropaeus.utca.toml  EuonymusEuonymusHamiltonianus.utca.toml  EuonymusEuonymusPhellomanus.utca.toml  EuonymusEuonymusSemiexsertus.utca.toml  EuonymusEuonymusSieboldianus.utca.toml  EuonymusMelanocaryaAlatus.utca.toml  EuonymusMelanocaryaSacrosantcus.utca.toml  EuonymusPseudovyenomusPauciflorus.utca.toml  KalonymusLatifolius.utca.toml  KalonymusMacropterus.utca.toml  KalonymusMaximowiczianus.utca.toml  KalonymusSachalinensis.utca.toml  PIN341.1.for
configs/H242/: H242_Control.toml  H242_H2O2.toml  Н242_Control.toml  Н242_H2O2.toml  Н242_NaCl.toml
configs/H626/: H626_-N_3days.toml  H626_-N_9days.toml  H626_Control_0d.toml  H626_Control_3d.toml  H626_Control_9d.toml
configs/Lunaria/temp/: 1.1 copy.toml  1.1.md
configs/LunariaRediviva/: LunariaRediviva.1.1.utca.toml  LunariaRediviva.1.2.utca.toml  LunariaRediviva.1.3.utca.toml  LunariaRediviva.2.1.utca.toml  LunariaRediviva.2.2.utca.toml  LunariaRediviva.3.1.utca.toml  LunariaRediviva.3.2.utca.toml  LunariaRediviva.3.3.utca.toml
configs/cedar/: cedar.md
configs/euonymus/: input.old.toml  input.test.toml
configs/lunaria_rediviva/: 1.1.utca.toml  1.2.utca.toml  1.3.utca.toml  2.1.utca.toml  2.2.utca.toml  3.1.utca.toml  3.2.utca.toml  3.3.utca.toml  temp.md
configs/lunaria_rediviva/temp/: 0.0.utca.toml  Lunaria 1.1.toml  tag11.md
configs/pc/: 2.toml  Pinaceae Cedrus.toml
configs/pinaceae/cedrus/: config.toml
configs/pinaceae_cedrus/: 1.toml
configs/suspensions/: Olea_M.toml  Olea_SH.toml  Panax.toml  Tribulus.toml
configs/suspensions copy/: Olea_M.toml  Olea_SH.toml  Panax.toml  Tribulus.toml
configs/test/: H626_Control_0d.toml  H626_Control_3d.toml  Olea_M.toml  Olea_SH.toml  cedar.toml  temp.toml
doc/: PIN341.for  ag.md  book.md  inchi.md  physical.adoc  ru.md  temp.md  thermodynamic.adoc  utca.adoc  utca.md
doc/configs/C70/: C70H2O2.utca.ron
doc/configs/C70/2023-10-24/: C70Control.utca.ron  C70H2O2.utca.ron  C70NaCl.utca.ron
doc/configs/H242/2023-10-24/: H242Control.utca.ron  H242H2O2.utca.ron  H242NaCl.utca.ron
doc/configs/H626/: H626_Control_-Mg3d.toml  H626_Control_-Mg9d.toml
doc/configs/H626/2023-10-22/: H626-N3Days.utca.ron  H626-N9Days.utca.ron  H626Control-Mg3Days.utca.ron  H626Control-Mg9Days.utca.ron  H626Control0Days.utca.ron  H626Control3Days.utca.ron  H626Control9Days.utca.ron
doc/configs/LunariaRediviva/: LunariaRediviva.1.3.utca.ron  LunariaRediviva.2.1.utca.ron  LunariaRediviva.2.2.utca.ron  LunariaRediviva.3.2.utca.ron  LunariaRediviva.3.3.utca.ron
doc/configs/LunariaRediviva/2024-01-24/: LunariaRediviva.1.1.utca.ron  LunariaRediviva.1.2.utca.ron  LunariaRediviva.1.3.utca.ron  LunariaRediviva.2.1.utca.ron  LunariaRediviva.2.2.utca.ron  LunariaRediviva.3.1.utca.ron  LunariaRediviva.3.2.utca.ron  LunariaRediviva.3.3.utca.ron
doc/configs/PinaceaeCedrus/2023-05-19/: PinaceaeCedrus.utca.ron
doc/configs/Suspensions/: OleaM.utca.ron
doc/fluent/: common.md  en.ftl  ru.ftl  see.md  temp.md
doc/publications/: 2022-12-05-07-10.34756%2FGEOS.2023.17.38740.adoc  book.adoc
doc/source/: PIN341 copy.for  PIN341.1.TXT  PIN341.1.for  PIN341.TXT  README.md  for.rs  pin341.rs
doc/test/: PinaceaeCedrus.utca.ron  PinaceaeCedrus.utca.toml  df.utca.ron
ftl/: cu.ftl  formal.ftl
ftl/en/: fatty_acids.ftl  properties.ftl
ftl/en/bars/: top.ftl
ftl/ru/: fatty_acids.ftl  properties.ftl
ftl/ru/bars/: top.ftl
input/cedar/: cedar.toml
input/euonymus/: input.toml
input/toml/: temp.toml
src/: acylglycerol.rs  const.rs  cu.rs  ecn.rs  ether.rs  fatty_acid copy 2.rs  fatty_acid copy 3.rs  fatty_acid copy 4.rs  fatty_acid copy 5.rs  fatty_acid copy.rs  fatty_acid.rs  localization.rs  main.rs  species.rs  taxonomy.rs  tree copy.rs  tree.rs
src/app/: context.rs  data copy 2.rs  data copy.rs  data.rs  mod.rs  settings.rs  utils.rs  view.rs
src/app/_context/: mod.rs
src/app/_context/settings/: calculation.rs  composition.rs  configuration.rs
src/app/_context/state/: calculation.rs  configuration.rs
src/app/computers/: calculation.rs  calculator copy 2.rs  calculator.rs  comparator copy.rs  comparator.rs  comparison.rs  composer copy 2.rs  composer copy 3.rs  composer copy.rs  composer.rs  composition copy 2.rs  composition copy 3.rs  composition copy.rs  composition.rs  fatty_acid.rs  mod.rs  visualization.rs  visualizer.rs
src/app/context/: mod.rs  state.rs
src/app/context/settings/: calculation.rs  comparison.rs  composition copy.rs  composition.rs  configuration.rs  mod.rs  visualization.rs
src/app/context/state/: calculation.rs  comparison.rs  (+2 more)
src/app/panes/: behavior.rs  calculation.rs  configuration copy.rs  configuration.rs  files.rs  mod.rs
src/app/tabs/: mod.rs
src/app/widgets/: float.rs  mod.rs
src/app/windows/: about.rs  github copy 2.rs  github copy.rs  github.rs  mod.rs
src/parsers/: mod.rs  toml.rs  whitespace.rs
src/properties/: density.rs  mod.rs  physical.rs  thermodynamic.rs  viscosity.rs
src/properties/critical/: mod.rs  pressure.rs  temperature.rs
src/utils/: bound.rs  egui.rs  egui_tiles.rs  float.rs  higher_order_functions.rs  log.rs  mod.rs  normalize.rs  polars.rs  spawn.rs  ui.rs  vec.rs
src/utils/egui/: app.rs  color.rs  content.rs  display.rs  mod.rs  response.rs  table.rs  ui.rs
src/widgets/: github.rs  mod.rs  pie_chart.rs  variable_list.rs
src/widgets/file_dialog/: error.rs  mod copy 2.rs  mod copy.rs  mod.rs
(+50 files in other folders)
