[package]
edition = "2021"
name = "utca"
version = "0.5.5"

[dependencies]
anyhow = "1.0.86"
eframe = { version = "0.28.1", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",
] }
egui = "0.28.1"
egui-notify = "0.15.0"
egui-phosphor = "0.6.0"
egui_animation = "0.5.0"
egui_dnd = "0.9.1"
egui_ext = { git = "https://github.com/kgv/egui_ext" }
egui_extras = "0.28.1"
egui_plot = "0.28.1"
egui_tiles = "0.9.0"
ehttp = { version = "0.5.0", features = ["json"] }
fluent = "0.16.1"
fluent_content = "0.0.5"
indexmap = { version = "2.4.0", features = ["serde"] }
intl-memoizer = "0.5.2"
itertools = "0.13.0"
maplit = "1.0.2"
molecule = { git = "https://github.com/ippras/molecule" }
nom = "7.1.3"
num = "0.4.3"
ordered-float = { version = "4.2.2", features = ["serde"] }
peroxide = "0.37.9"
polars = { version = "0.42.0", features = [
    "abs",
    "concat_str",
    "cross_join",
    "cum_agg",
    "dtype-array",
    "dtype-i8",
    "dtype-struct",
    "dtype-u8",
    "is_in",
    "lazy",
    "list_any_all",
    "list_count",
    "list_eval",
    "regex",
    "round_series",
    "serde",
    "strings",
] }
polars-lazy = "0.42.0"
# polars = { git = "https://github.com/pola-rs/polars", features = [
#     "abs",
#     "concat_str",
#     "cross_join",
#     "dtype-i8",
#     "dtype-u8",
#     "is_in",
#     "lazy",
#     "list_any_all",
#     "list_eval",
#     "regex",
#     "round_series",
#     "serde",
#     "strings",
#     "zip_with",
# ] }
poll-promise = { version = "0.3.0", features = ["web"] }
rawpointer = "0.2.1"
rfd = "0.14.1"
ron = "0.8.1"
serde = { version = "1.0.209", features = ["derive", "std"] }
simple-easing = "1.0.1"
tabled = "0.16.0"
thiserror = "1.0.63"
toml_edit = { version = "0.22.20", features = ["serde"] }
tracing = "0.1.40"
unic-langid = { version = "0.9.5", features = ["macros"] }
uom = "0.36.0"
url = { version = "2.5.2", features = ["serde"] }

# egui_dock = { version = "0.13.0", features = ["serde"] }
# thiserror = "1.0.49"
# regex = "1.9.6"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.15", features = ["js"] }
js-sys = "0.3.70"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = ["FilePropertyBag"] }
# File, FilePropertyBag

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
