[package]
edition = "2021"
name = "utca"
version = "0.5.5"

[dependencies]
anyhow = "1.0.89"
base64 = "0.22.1"
eframe = { version = "0.28.1", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",
] }
egui = "0.28.1"
egui-notify = "0.15.0"
egui-phosphor = "0.6.0"
egui_animation = "0.5.0"
egui_dnd = "0.9.1"
egui_ext = { git = "https://github.com/kgv/egui_ext" }
egui_extras = "0.28.1"
egui_plot = "0.28.1"
egui_tiles = "0.9.1"
ehttp = { version = "0.5.0", features = ["json", "native-async"] }
fluent = "0.16.1"
fluent_content = "0.0.5"
indexmap = { version = "2.5.0", features = ["serde"] }
intl-memoizer = "0.5.2"
itertools = "0.13.0"
maplit = "1.0.2"
molecule = { git = "https://github.com/ippras/molecule" }
num = "0.4.3"
ordered-float = { version = "4.2.2", features = ["serde"] }
polars = { version = "0.42.0", default-features = false, features = [
    "concat_str",
    "cross_join",
    "diagonal_concat",
    "dtype-array",
    "dtype-i8",
    "dtype-struct",
    "dtype-u8",
    "lazy",
    "list_eval",
    "round_series",
    "serde-lazy",
    "strings",
    # "abs",
    # "cum_agg",
    # "is_in",
    # "list_any_all",
    # "list_count",
    # "regex",
] }
ron = "0.8.1"
serde = { version = "1.0.210", features = ["derive", "std"] }
thiserror = "1.0.63"
tracing = "0.1.40"
unic-langid = { version = "0.9.5", features = ["macros"] }
uom = "0.36.0"
url = { version = "2.5.2", features = ["serde"] }

nom = "7.1.3"
peroxide = "0.37.9"
rfd = "0.14.1"
simple-easing = "1.0.1"
# polars-lazy = "0.42.0"
# rawpointer = "0.2.1"
# toml_edit = { version = "0.22.20", features = ["serde"] }
# tabled = "0.16.0"
# thiserror = "1.0.49"
# regex = "1.9.6"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = { version = "0.3.0", features = ["tokio"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.15", features = ["js"] }
js-sys = "0.3.70"
poll-promise = { version = "0.3.0", features = ["web"] }
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = ["FilePropertyBag"] }
# File, FilePropertyBag

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
