[package]
edition = "2021"
name = "utca"
version = "0.5.5"

[dependencies]
anyhow = "1.0.89"
base64 = "0.22.1"
eframe = { version = "0.29.1", features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui = "0.29.1"
egui-notify = "0.16.0"
egui-phosphor = "0.7.1"
egui_ext = { git = "https://github.com/kgv/egui_ext" }
egui_extras = "0.29.1"
egui_plot = "0.29.0"
egui_table = { git = "https://github.com/rerun-io/egui_table", rev = "556d4f080a0259e5f46901733e4c3a02f7f0b06a", default-features = false }
egui_tiles = "0.10.1"
ehttp = { version = "0.5.0", features = ["json", "native-async"] }
fluent = "0.16.1"
fluent_content = "0.0.5"
intl-memoizer = "0.5.2"
itertools = "0.13.0"
maplit = "1.0.2"
molecule = { git = "https://github.com/ippras/molecule" }
num = "0.4.3"
ordered-float = { version = "4.2.2", features = ["serde"] }
polars = { git = "https://github.com/pola-rs/polars", rev = "be5a4b453ca74bb5e0c782c292e9fca6aa60b203", default-features = false, features = [
    "concat_str",
    "cross_join",
    "diagonal_concat",
    "dtype-array",
    "dtype-i8",
    "dtype-struct",
    "dtype-u8",
    "fmt",             # temp
    "lazy",
    "list_any_all",
    "list_eval",
    "regex",
    "round_series",
    "serde-lazy",
    "strings",
    # "abs",
    # "cum_agg",
    # "is_in",
    # "list_count",
] }
radix_trie = "0.2.1"
ron = "0.8.1"
serde = { version = "1.0.210", features = ["derive", "std"] }
thiserror = "1.0.64"
tracing = "0.1.40"
unic-langid = { version = "0.9.5", features = ["macros"] }
uom = "0.36.0"
url = { version = "2.5.2", features = ["serde"] }

# indexmap = { version = "2.5.0", features = ["serde"] }
# egui_dnd = "0.9.1"
# rfd = "0.15.0"
# egui_animation = "0.5.0"
# nom = "7.1.3"
# peroxide = "0.37.9"
# simple-easing = "1.0.1"
# polars-lazy = "0.42.0"
# rawpointer = "0.2.1"
# toml_edit = { version = "0.22.20", features = ["serde"] }
# tabled = "0.16.0"
# thiserror = "1.0.49"
# regex = "1.9.6"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = { version = "0.3.0", features = ["tokio"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.15", features = ["js"] }
js-sys = "0.3.70"
poll-promise = { version = "0.3.0", features = ["web"] }
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = ["FilePropertyBag"] }
# File, FilePropertyBag

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
# accesskit = { git = "https://github.com/NicolasBircksZR/accesskit", branch = "patch01" }
